# pocket_daw

./: README.md
daw/: example.txt  example_2.txt  prepare_projects.sh
daw_with_ffi/: .metadata  ffigen.yaml  pubspec.yaml
daw_with_ffi/android/: build.gradle  settings.gradle
daw_with_ffi/android/src/main/: AndroidManifest.xml
daw_with_ffi/example/: pubspec.yaml
daw_with_ffi/example/android/app/: build.gradle
daw_with_ffi/example/android/app/src/main/: AndroidManifest.xml
daw_with_ffi/example/android/app/src/main/kotlin/com/example/daw_with_ffi_example/: MainActivity.kt
daw_with_ffi/example/lib/: audio_memory.dart  constants.dart  daw.dart  daw_project.dart  export_audio.dart  import_android.dart  main.dart  piano.dart  storage.dart  stub.dart  timeline.dart  track.dart  track_button.dart
daw_with_ffi/example/lib/l10n/: app_en.arb  app_pl.arb
daw_with_ffi/example/linux/: CMakeLists.txt
daw_with_ffi/example/linux/flutter/: generated_plugins.cmake
daw_with_ffi/example/linux/runner/: my_application.cc
daw_with_ffi/lib/: daw_with_ffi.dart  daw_with_ffi_bindings_generated.dart
daw_with_ffi/linux/: CMakeLists.txt
daw_with_ffi/src/: CMakeLists.txt  daw_with_ffi.c  daw_with_ffi.h
